--- a/style.css
+++ b/style.css
@@ -1,13 +1,220 @@
-.carousel-item{
-    height: 25rem;
+
+.toggler{
+    display: none;
+}
+#menubutton{
+    top: 1rem;
+    margin-left: .5rem;
+    background-color: rgb(116, 116, 116);
+    height: 2.3rem;
+    width: 3.3rem;
+    border: none;
+    border-radius: 5px;
+    color: rgb(0, 0, 0);
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 4px;
+}
+
+.m-menu{
+    
+    font-family: cursive;
+    max-width: 100%;
+    text-align: center;
+    word-spacing: .5rem;
+    height: 0rem;  
+    padding: .5rem;
+    z-index: 1;
+    
+    
+}
+a{
+    color: ivory;
+    font-weight: 800;
+    font-family: cursive;
 
 }
+a:hover{
+    border-radius: 6px;
+    color: #790a0a;
+    transition: .4s;
+}
+.current{
+    color: #790a0a;
+}
+.s-li{
+    background-color: rgb(0, 0, 0);
+    font-size: 1rem;
+    color: ivory;
+    width: 100%;
+    top: 0rem;
+    padding: 1rem;
+    left: 0rem;
+    position: absolute;
+    cursor: pointer;
+    
+}
+
+.drop:hover{
+    border-radius: 6px;
+    color: #790a0a;
+    transition: .3s;
+    cursor: pointer;
+    font-weight: bolder;
+
+}
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    border-radius: 10%;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    text-align: left;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+      background-color: none; 
+      transition: .6s;
+      color:rgb(218, 0, 0);
+    }
+     
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+      display: block;}
+
+
+
+ul#menu li{
+    text-decoration: none;
+    list-style: none;
+    display: inline;
+    padding: 1rem;
+}
+
+.w-100{
+    height: 30rem;
+
+}
+.carousel-item{
+    height: 30rem;
+
+}
+
+
+
+
 
 .container{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: space-around;
+    }
+    
+
+
+.card{
+    background-color: red;
+    text-align: center;
+    margin: 2.5rem;
+    width: 15rem;
+    height: 35rem;
+    
+   
+}
+.card-img-top{
+    height: 18rem;
+    width: 18rem;
+}
+.btn{
+    margin: 1rem;
 
 }
-.card{
-    flex: 33.3%;
-    padding: 2rem;
+@media screen and ( max-width: 450px){
+    #menu{
+        display: none;
+    }
+    
+    
+    .maindrop-li{
+        background-color: rgb(65, 65, 65);
+        margin-top: 5rem;
+        text-align: left;
+        display: block;
+        color: ivory;
+        line-height: 4rem;
+        width: 60%;
+        top: 0rem;
+        padding: .5rem;
+        left: 0rem;
+        position: absolute;
+        z-index: 30;
+        animation: fadeDown .8s forwards;
+    }
+    
+    .toggler{
+        margin-top: 0rem;
+        display: block;
+    }
+        
+    
+    .menuclicker{
+        margin-top: 1rem;
+        height: 3rem;
+        width: 3rem;
+        background-color: sienna;
+    
+        }
+    .menuclicker:hover{
+        background-color: silver;
+        transition: .7s;
+    
+        }
+
+
+
+    .container{
+        display: block;
+    
+    }
 }
+
+
+/*ANIMATIONS*/
+@keyframes fadeDown{
+    0%{
+        transform: translateY(-4rem);
+        opacity: 0;
+    }
+    50%{
+        opacity: .3;
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
